--- a/FIT5140Final/Base.lproj/Main.storyboard
+++ b/FIT5140Final/Base.lproj/Main.storyboard
@@ -374,7 +374,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mM0-Af-FUI">
-                                                <rect key="frame" x="108" y="345" width="198" height="46"/>
+                                                <rect key="frame" x="108.33333333333331" y="345" width="198" height="46"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="38"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -462,7 +462,7 @@
                                 <rect key="frame" x="0.0" y="214" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kd7-o6-FhR" id="y6e-9r-mzo">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sL-bC-9JU">
@@ -672,7 +672,7 @@
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Eyo-Xq-Mnh" id="jhH-Jc-3wt">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="eeU-1n-Hsf">
@@ -839,7 +839,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tree_main" translatesAutoresizingMaskIntoConstraints="NO" id="yLv-Jv-7Th">
-                                <rect key="frame" x="37.666666666666657" y="95" width="339" height="329"/>
+                                <rect key="frame" x="37.666666666666657" y="94.999999999999972" width="339" height="329.33333333333326"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="yLv-Jv-7Th" secondAttribute="height" multiplier="339:329" id="HOx-cU-h46"/>
                                 </constraints>
@@ -978,7 +978,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2rR-F7-pbQ">
-                                                <rect key="frame" x="321" y="490.33333333333337" width="72" height="30.000000000000114"/>
+                                                <rect key="frame" x="321" y="470" width="72" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="72" id="4v0-dw-kgN"/>
                                                     <constraint firstAttribute="height" constant="30" id="oQy-FC-CEW"/>
@@ -999,7 +999,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress hud with ability to display gif images implemented with swift" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ER7-9u-gGU">
-                                                <rect key="frame" x="19" y="380.66666666666669" width="374" height="40.666666666666629"/>
+                                                <rect key="frame" x="19" y="380.66666666666674" width="374" height="20.333333333333314"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -1016,7 +1016,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MMShareSheet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="naI-CP-aYc">
-                                                <rect key="frame" x="19" y="428.33333333333331" width="256" height="27"/>
+                                                <rect key="frame" x="19" y="408" width="256" height="27"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="256" id="tHh-x9-s43"/>
                                                     <constraint firstAttribute="height" constant="27" id="zFj-RE-Vdc"/>
@@ -1026,7 +1026,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAThermometer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3x-4h-RbE">
-                                                <rect key="frame" x="19" y="572" width="256" height="27"/>
+                                                <rect key="frame" x="19" y="531.33333333333337" width="256" height="27"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="27" id="LSm-We-cPn"/>
                                                     <constraint firstAttribute="width" constant="256" id="hNB-6l-Oqz"/>
@@ -1036,13 +1036,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An simple pop-up selection box" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3i-s7-4tL">
-                                                <rect key="frame" x="19" y="463.33333333333331" width="374" height="21"/>
+                                                <rect key="frame" x="19" y="443" width="374" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rOs-Xz-A2f">
-                                                <rect key="frame" x="321" y="426.33333333333331" width="72" height="30"/>
+                                                <rect key="frame" x="321" y="406" width="72" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="SkG-Ul-Hx3"/>
                                                     <constraint firstAttribute="width" constant="72" id="iar-7C-NAk"/>
@@ -1053,7 +1053,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STLBGVideo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHe-Gu-Lth">
-                                                <rect key="frame" x="19" y="491.33333333333337" width="256" height="27.000000000000114"/>
+                                                <rect key="frame" x="19" y="471" width="256" height="27"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="27" id="I5X-UT-4A7"/>
                                                     <constraint firstAttribute="width" constant="256" id="QXo-LV-css"/>
@@ -1063,13 +1063,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make your view controllers a custom background video" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sx-XF-Fcy">
-                                                <rect key="frame" x="19" y="523.33333333333348" width="374" height="40.666666666666629"/>
+                                                <rect key="frame" x="19" y="503.00000000000006" width="374" height="20.333333333333428"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" tag="103" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9aK-26-Fs5">
-                                                <rect key="frame" x="321" y="569" width="72" height="30"/>
+                                                <rect key="frame" x="321" y="528.33333333333337" width="72" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="72" id="8C1-Ca-o2l"/>
                                                     <constraint firstAttribute="height" constant="30" id="lRh-wb-ZHb"/>
@@ -1080,7 +1080,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A custom progress bar with a thermometer look" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwP-fx-t1F">
-                                                <rect key="frame" x="19" y="607" width="374" height="20"/>
+                                                <rect key="frame" x="19" y="566.33333333333337" width="374" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
